# ribas-ferias

./: .gitignore  Conexao  DATA  README.md  index.html  package-lock.json  package.json
backend/: Cargo.toml  config.toml
backend/migrations/: 0001_roles_table.sql  0001_users_table.sql  0002_RequestType_table.sql  0002_requests_table.sql  0003_users_table.sql  0004_add_user_fields.sql  0004_auditlog_table.sql  0004_companysettings_table.sql  0005_requests_table.sql  0006_auditlog_table.sql  0006_rename_users.sql  0006_roles_table.sql  0007_RequestType_table.sql  0007_notifications_table.sql  0007_requests_table.sql  0008_Teams_Table.sql  0008_notifications_table.sql  0009_Teams_Table.sql  0009_team_member.sql  0010_add_team_id_to_users.sql  0010_fix_teams_data.sql  0011_fix_user_superior.sql  0011_team_member.sql  0012_auditlog_table.sql  0013_add_team_id_to_users.sql  0013_fix_jsonb_unnest.sql  0014_fix_trigger_loop.sql  0015_populate_members.sql  0016_add_users_to_team1.sql  0017_repopulate_members.sql  0018_update_team_jsonb_trigger.sql  0019_add_user_to_team_members_trigger.sql  0020_remove_user_from_team_members_trigger.sql  0021_handle_team_soft_delete.sql  0022_update_jsonb_on_user_change.sql  0023_handle_leader_change.sql  0025_set_default_avatar_url.sql
backend/src/: main.rs  state.rs  utils.rs
backend/src/database/: db.rs
backend/src/handlers/: auth_handler.rs  file_handler.rs  image_handler.rs  mod.rs  notification_handler.rs  password_reset_handler.rs  request_handler.rs  request_type_handler.rs  role_handler.rs  team_handler.rs  user_handler.rs
backend/src/mailer/: mailer.rs
backend/src/models/: auth_model.rs  mod.rs  notification_model.rs  request_model.rs  request_password.rs  request_type_model.rs  reset_password.rs  role_model.rs  team_model.rs  user_model.rs
backend/src/routes/: mod.rs  notification_routes.rs  password_reset_routes.rs  request_routes.rs  request_type_routes.rs  role_routes.rs  team_routes.rs  upload_routes.rs  (+1 more)
(+147 files in other folders)
