[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["cors"] }
toml = "1.0.6"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
argon2 = "0.5.3"
