[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["cors"] }
toml = "1.0.6"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
dotenvy = "0.15"
chrono = "0.4"