[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["cors"] }
toml = "1.0.6"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
axum-extra = { version = "0.12.5", features = ["typed-header", "cookie"] }
dotenvy = "0.15"
sqlx-cli = "0.8.6"
password-hash = "0.6"
time = "0.3"
lettre = "0.11"
uuid = { version = "1.0", features = ["v4"] }
image = "0.25"
